# BazelBuildTest

./: BUILD.bazel  README.md  WORKSPACE  deps.bzl  go.mod  go.sum  package.json  tsconfig.json
go/operator/: BUILD.bazel  Makefile  PROJECT  main.go
go/operator/config/manager/: controller_manager_config.yaml
ts/: BUILD
